--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "use-double-tap": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
